# Echoes

./: .gitignore  CMakeLists.txt
CMake/: EchoesConfig.cmake  FindEchoes.cmake
Core/: CMakeLists.txt
Core/include/: EColor.h  ECore.h  EException.h  EPrerequisites.h  EViewport.h  EWindow.h
Core/src/: ECore.cpp  EWindow.cpp
CorePy/: CMakeLists.txt
CorePy/src/: ECorePy.cpp
Demos/: CMakeLists.txt
Demos/Basic/: CMakeLists.txt
Demos/Basic/src/: BasicDemo.cpp
Dependencies/: HOLDER.md
